2.2.8
-----
- Properly handle reports where Duplicati version is not parsed from emails (Issue #123)

2.2.7
-----
- Properly parse "Log data" field, newly introduced in Duplicati circa November 2018 (Issue #112)
- Parse JSON-formatted emails from Duplicati job runs (Issue #113)
- Added "Duplicati version" field option to report. Can be helpful in discovering when one of your systems is behind in Duplicati updates (Issue #114)
- Added -F option. Same as -f, but also sends resulting output file as an attachment to the email. (Issue #115)
- Updated database schema, now on version 1.0.3. Program will automaticaly upgrade older DB versions to the new format.
- Fixed weird .rc file version numbering system. (Issue #120)
- Added Duplicati version column to "Last Seen" report table (Issue #121)

2.2.6
-----
- Enable setting emails to read/seen after processing - IMAP only (Issue #111)

2.2.5
-----
- Fix POP3 headers to convert them to IMAP style for processing (Issue #105)
- Fix several stupid spelling errors (Issue #106 & others)
- Fix issue where POP3 server would fail keepalive check due to bad comparison of return from server.noop() call (Issue #107)
- Updated documents to include advice for setting POP3 "Leave messages on servr" option (Issue #107)
- Option to mask sensitive data from log files: [main] masksensitive (Issue #109)
- Fix issue where POP3 email causes log writing to crash system (Issue #108)

2.2.4
-----
- Added backup duration to reports (Issue #102)
     - Altered database schema to accommodate backup duration in reports. Will require (automatic) DB upgrade. BACKUP YOUR DATABSE AND .RC FILE BEFORE EXECUTING!
     - Added durationzeroes option in [report] section to determine if zero units should be displayed in the time duration
- Updated report footer to add program version number
- Fixed an issue where the colon (:) is used as part of the subject line. (Issue #104)

2.2.3
-----