@@ -1,6 +1,7 @@
 2.2.8
 -----
 - Properly handle reports where Duplicati version is not parsed from emails (Issue #123)
+- Added [incoming]unreadonly option to only process unread messages. Will dramatically speed up processing. (Issue #124)
 
 2.2.7
 -----
